{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 64,
  "lineage": "8809aacf-d5e5-72a4-05d5-0a322f6a0568",
  "resources": [
    {
      "module": "module.c2_redirectors",
      "mode": "managed",
      "type": "aws_eip",
      "name": "c2_redirector_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afe9c4938e61b0d2",
            "arn": "arn:aws:ec2:us-east-1:954976284809:elastic-ip/eipalloc-0afe9c4938e61b0d2",
            "association_id": "eipassoc-01658cc299bfaf4c8",
            "domain": "vpc",
            "id": "eipalloc-0afe9c4938e61b0d2",
            "instance": "i-0f94dfc8a48712fd0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ea3834972bf90551",
            "private_dns": "ip-172-31-88-75.ec2.internal",
            "private_ip": "172.31.88.75",
            "public_dns": "ec2-107-20-37-68.compute-1.amazonaws.com",
            "public_ip": "107.20.37.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "C2 Redirector Server Elastic IP"
            },
            "tags_all": {
              "Name": "C2 Redirector Server Elastic IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.c2_redirectors",
      "mode": "managed",
      "type": "aws_instance",
      "name": "c2_redirector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b10e08d247fb927",
            "arn": "arn:aws:ec2:us-east-1:954976284809:instance/i-0f94dfc8a48712fd0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f94dfc8a48712fd0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sliver_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea3834972bf90551",
            "private_dns": "ip-172-31-88-75.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.88.75",
            "public_dns": "ec2-107-20-37-68.compute-1.amazonaws.com",
            "public_ip": "107.20.37.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01824c6f470534098",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "c2-redirector-sg",
              "ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b438b77eb5879014",
            "tags": {
              "Name": "c2-redirector"
            },
            "tags_all": {
              "Name": "c2-redirector"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07e9b236df2ab99f6",
              "sg-08a2b6b988b447d4b",
              "sg-0e0c5d144c94cea56"
            ]
          },
          "dependencies": [
            "module.c2_server.aws_eip.c2_server_eip",
            "module.networking.aws_security_group.c2_redirector_sg",
            "module.networking.aws_security_group.certbot-sg",
            "module.networking.aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "module": "module.c2_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "c2_server_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02aa98e61ed1abd86",
            "arn": "arn:aws:ec2:us-east-1:954976284809:elastic-ip/eipalloc-02aa98e61ed1abd86",
            "association_id": "eipassoc-051fe3be0fe96f575",
            "domain": "vpc",
            "id": "eipalloc-02aa98e61ed1abd86",
            "instance": "i-0aea1d03d84eb596b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07cf18a97c9c3c670",
            "private_dns": "ip-172-31-31-177.ec2.internal",
            "private_ip": "172.31.31.177",
            "public_dns": "ec2-44-216-85-147.compute-1.amazonaws.com",
            "public_ip": "44.216.85.147",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "C2 Server Elastic IP"
            },
            "tags_all": {
              "Name": "C2 Server Elastic IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.c2_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "c2_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b10e08d247fb927",
            "arn": "arn:aws:ec2:us-east-1:954976284809:instance/i-0aea1d03d84eb596b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aea1d03d84eb596b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "sliver_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cf18a97c9c3c670",
            "private_dns": "ip-172-31-31-177.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.177",
            "public_dns": "ec2-44-216-85-147.compute-1.amazonaws.com",
            "public_ip": "44.216.85.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bb7bb5a833fe2525",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "c2-server-sg",
              "ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e006bc4f1e24b6e8",
            "tags": {
              "Name": "c2-server"
            },
            "tags_all": {
              "Name": "c2-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ced192efb1106eab",
              "sg-0e0c5d144c94cea56"
            ]
          },
          "dependencies": [
            "module.c2_redirectors.aws_eip.c2_redirector_eip",
            "module.networking.aws_security_group.c2_traffic_sg",
            "module.networking.aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "c2_redirector_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976284809:security-group/sg-08a2b6b988b447d4b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a2b6b988b447d4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "c2-redirector-sg",
            "name_prefix": "",
            "owner_id": "954976284809",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03900dd222f305d90"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "c2_traffic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976284809:security-group/sg-0ced192efb1106eab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ced192efb1106eab",
            "ingress": [
              {
                "cidr_blocks": [
                  "107.20.37.68/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "107.20.37.68/32"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "107.20.37.68/32"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "c2-server-sg",
            "name_prefix": "",
            "owner_id": "954976284809",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03900dd222f305d90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c2_redirectors.aws_eip.c2_redirector_eip"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "certbot-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976284809:security-group/sg-07e9b236df2ab99f6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07e9b236df2ab99f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "certbot-sg",
            "name_prefix": "",
            "owner_id": "954976284809",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03900dd222f305d90"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976284809:security-group/sg-0e0c5d144c94cea56",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e0c5d144c94cea56",
            "ingress": [
              {
                "cidr_blocks": [
                  "24.131.11.103/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "954976284809",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03900dd222f305d90"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}